# unicorn-issue

./: .gitignore  pyproject.toml  requirements.txt
app/blog/: views.py
app/blog/components/: child.py  child2.py  sample.py
app/blog/templates/: blog.html
app/blog/templates/unicorn/: child.html  child2.html  sample.html
app/config/: settings.py  urls.py
